# Crystal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  lover.ppm  main.cpp
application/: CMakeLists.txt  film.cpp  film.hpp  previewer.cpp  previewer.hpp  spinLock.hpp  threadPool.cpp  threadPool.hpp
core/: CMakeLists.txt  scene.hpp
core/accelerate/: bvh.cpp  scenebvh.cpp
core/camera/: camera.hpp
core/material/: conductorMaterial.cpp  conductorMaterial.hpp  dielectricMaterial.hpp  diffuseMaterial.cpp  diffuseMaterial.hpp  groundMaterial.cpp  groundMaterial.hpp  specularMaterial.hpp
core/mesh/: model.hpp  plane.cpp  plane.hpp  shape.hpp  sphere.hpp  triangle.cpp
core/renderer/: PTRenderer.hpp  RTRenderer.cpp  debugRenderer.hpp  normalRenderer.hpp  renderer.cpp
core/until/: frame.hpp  profile.cpp
myEngine/: ray.cpp  ray.hpp  scene.cpp
myEngine/accelerate/: bounds.cpp  bounds.hpp  bvh.hpp  scenebvh.cpp  scenebvh.hpp
myEngine/camera/: camera.cpp  camera.hpp
myEngine/colorSpace/: rgb.hpp
myEngine/material/: conductorMaterial.cpp  conductorMaterial.hpp  dielectricMaterial.cpp  dielectricMaterial.hpp  diffuseMaterial.cpp  groundMaterial.cpp  material.hpp  specularMaterial.cpp
myEngine/mesh/: model.cpp  shape.hpp  sphere.cpp  triangle.hpp
myEngine/pbr/: microfacet.cpp  microfacet.hpp
myEngine/renderer/: PTRenderer.cpp  RTRenderer.cpp  RTRenderer.hpp  debugRenderer.cpp  normalRenderer.cpp  renderer.hpp
myEngine/sample/: spherical.hpp
myEngine/until/: complex.hpp  frame.cpp  profile.hpp  progress.cpp  rng.hpp  (+1 more)
ppm/: btc.ppm  normal.ppm  ttc.ppm
